[gd_scene load_steps=15 format=2]

[ext_resource path="res://entities/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/stars background.png" type="Texture" id=3]
[ext_resource path="res://entities/SpaceStore/SpaceStore.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/musics/ObservingTheStar.ogg" type="AudioStream" id=5]
[ext_resource path="res://screens/SpaceStoreScreen/SpaceStoreScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://screens/GameOver/GameOver.tscn" type="PackedScene" id=7]
[ext_resource path="res://screens/Game/AsteroidController.gd" type="Script" id=8]
[ext_resource path="res://assets/Shaders/GameMoveBackground.gdshader" type="Shader" id=9]

[sub_resource type="Curve" id=5]
min_value = 0.08
_data = [ Vector2( 0, 0.08 ), 0.0, 0.387977, 0, 0, Vector2( 1, 1 ), -0.22718, 0.0, 0, 0 ]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 9 )
shader_param/Direction = Vector2( 0, -1 )
shader_param/Speed = 0.02

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 640, 10 )

[sub_resource type="Animation" id=6]
resource_name = "Game Start"
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 800 ), Vector2( 640, 600 ), Vector2( 640, 480 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
curve_progress = SubResource( 5 )

[node name="SpaceStars" type="TextureRect" parent="."]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lasers" type="Node2D" parent="."]

[node name="asteroids" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="SpaceStore" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, -600 )

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 1 )]
position = Vector2( 640, 480 )

[node name="BaseScreen" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="SpaceStoreScreen" parent="BaseScreen" instance=ExtResource( 6 )]
visible = false

[node name="GameOver" parent="BaseScreen" instance=ExtResource( 7 )]
visible = false

[node name="Walls" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="RigidBody2D" parent="Walls"]
collision_mask = 0
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/left"]
position = Vector2( 0, 360 )
shape = SubResource( 1 )

[node name="right" type="RigidBody2D" parent="Walls"]
position = Vector2( 1280, 0 )
collision_mask = 0
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/right"]
position = Vector2( 0, 360 )
shape = SubResource( 1 )

[node name="top" type="RigidBody2D" parent="Walls"]
collision_mask = 0
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/top"]
position = Vector2( 640, 0 )
shape = SubResource( 2 )

[node name="bottom" type="RigidBody2D" parent="Walls"]
position = Vector2( 0, 720 )
collision_mask = 0
mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/bottom"]
position = Vector2( 640, 0 )
shape = SubResource( 2 )

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Timer" type="Timer" parent="."]

[node name="UpdateAsteroidsProb" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Game Start" = SubResource( 6 )

[connection signal="enter_in_Space_Store" from="SpaceStore" to="." method="show_space_store_screen"]
[connection signal="create_bullet" from="Player" to="." method="_on_Player_create_bullet"]
[connection signal="player_dead" from="Player" to="." method="Player_dead"]
[connection signal="exit_space_store" from="BaseScreen/SpaceStoreScreen" to="." method="show_space_store_screen"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="UpdateAsteroidsProb" to="." method="_on_UpdateAsteroidsProb_timeout"]
